--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Pokedex</title>
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <div id="container">
