--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <body>
         <div id="container">
         </div>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html>
