--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     </head>
     <body>
         <div class="container">
+            <div class="navbar">
+                <nav>
+                    <div class="nav-wrapper blue darken-4">
+                        <a href="#!" class="brand-logo center">[Trainer Name]</a>
+                    </div>
+                </nav>
+            </div>
+            <div class="main">
+            </div>
+            <footer class="page-footer blue darken-4">
+                <div class="container">
+                    <div class="row">
+                        <div class="col s6">
+                            <a class="waves-effect waves-light btn-large">Button</a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
         <script
