--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
             </div>
             <div class="main">
             </div>
+            <div class="glass">
+            </div>
             <footer class="page-footer blue darken-4">
                 <div class="container">
                     <div class="row">
                         <div class="col s6">
-                            <a class="waves-effect waves-light btn-large">Button</a>
+                            <a class="waves-effect waves-light btn-large cyan lighten-1">Button</a>
                         </div>
                     </div>
                 </div>
             </footer>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html>
