--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container" id="pokedex">
             <div class="navbar">
                 <nav>
                     <div class="nav-wrapper blue darken-4">
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col s6">
-                            <a class="waves-effect waves-light btn-large cyan lighten-1">Button</a>
+                            <a class="waves-effect waves-light btn-large center cyan lighten-1">Button</a>
                         </div>
                     </div>
                 </div>
