--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
             <div class="navbar">
                 <nav>
                     <div class="nav-wrapper blue darken-4">
-                        <a href="#!" class="brand-logo center">[Trainer Name]</a>
+                        <a href="#!" class="brand-logo center"></a>
                     </div>
                 </nav>
             </div>
             <div class="main">
+                <div class="carousel">
+                </div>
             </div>
             <div class="glass">
             </div>
@@ -24,7 +26,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col s6">
-                            <a class="waves-effect waves-light btn-large center cyan lighten-1">Button</a>
+                            <a class="waves-effect waves-light btn-large center cyan lighten-1" id="mainButton">start</a>
                         </div>
                     </div>
                 </div>
