fix card-reveal functionality and info display

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="carousel">
                 </div>
             </div>
-            <div class="glass">
-            </div>
+            <!-- <div class="glass">
+            </div>-->
             <footer class="page-footer blue darken-4">
                 <div class="container">
                     <div class="row">
