add SASS to project

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     </head>
     <body>
         <div class="container" id="pokedex">
-            <div class="navbar">
-                <nav>
-                    <div class="nav-wrapper blue darken-4">
-                        <a href="#!" class="brand-logo center"></a>
-                    </div>
-                </nav>
-            </div>
+            <nav>
+                <div class="nav-wrapper blue darken-4">
+                    <span class="brand-logo center" id="trainerName">Trainer:</span>
+                </div>
+            </nav>
             <div class="main">
                 <div class="carousel">
                 </div>
@@ -25,8 +23,8 @@
             <footer class="page-footer blue darken-4">
                 <div class="container">
                     <div class="row">
-                        <div class="col s6">
-                            <a class="waves-effect waves-light btn-large center cyan lighten-1" id="mainButton">start</a>
+                        <div class="col s12">
+                            <a class="pulse waves-effect waves-light btn-floating btn-large center cyan lighten-1" id="mainButton"></a>
                         </div>
                     </div>
                 </div>
