--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
                     <span class="brand-logo center" id="trainerName">Trainer:</span>
                 </div>
             </nav>
-            <div class="main">
-                <div class="carousel">
+            <div class="row">
+                <div class="col s12">
+                    <div class="main">
+                        <div class="carousel">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- <div class="glass">
-            </div>-->
             <footer class="page-footer blue darken-4">
                 <div class="container">
                     <div class="row">
-                        <div class="col s12">
-                            <a class="pulse waves-effect waves-light btn-floating btn-large center cyan lighten-1" id="mainButton"></a>
+                        <div class="col s12 center">
+                            <a class="pulse waves-effect waves-light btn-floating btn-large cyan lighten-1" id="mainButton"></a>
                         </div>
                     </div>
                 </div>
