edit pokedex display for mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container" id="pokedex">
             <nav>
                 <div class="nav-wrapper blue darken-4">
-                    <span class="brand-logo center" id="trainerName">Trainer:</span>
+                    <span class="brand-logo  center hide-on-small-only" id="trainerName">Trainer:</span>
                 </div>
             </nav>
             <div class="row">
@@ -22,14 +22,12 @@
                     </div>
                 </div>
             </div>
-            <footer class="page-footer blue darken-4">
-                <div class="container">
+            <footer class="page-footer blue darken-4 valign-wrapper">
                     <div class="row">
                         <div class="col s12 center">
-                            <a class="pulse waves-effect waves-light btn-floating btn-large cyan lighten-1" id="mainButton"></a>
+                            <a class="pulse waves-effect waves-light btn-floating btn-medium cyan lighten-1" id="mainButton"></a>
                         </div>
                     </div>
-                </div>
             </footer>
         </div>
         <script
