--- a/index.html
+++ b/index.html
@@ -11,53 +11,59 @@
         <div class="container" id="pokedex">
             <nav>
                 <div class="nav-wrapper blue darken-4">
-                    <span class="brand-logo  center hide-on-small-only" id="trainerName">Trainer:</span>
+                    <span class="brand-logo  center" id="trainerName">Trainer:</span>
                 </div>
             </nav>
             <div class="row">
                 <div class="col s12">
                     <div class="main">
-                        <div class="preloader-wrapper big" id="preloadSpinner">
-                            <div class="spinner-layer spinner-blue">
-                            <div class="circle-clipper left">
-                                <div class="circle"></div>
-                            </div><div class="gap-patch">
-                                <div class="circle"></div>
-                            </div><div class="circle-clipper right">
-                                <div class="circle"></div>
-                            </div>
-                        </div>
-                        <div class="spinner-layer spinner-red">
-                            <div class="circle-clipper left">
-                                <div class="circle"></div>
-                            </div><div class="gap-patch">
-                                <div class="circle"></div>
-                            </div><div class="circle-clipper right">
-                                <div class="circle"></div>
-                            </div>
-                        </div>
+                        <div class="row">
+                            <div class="col s12 center">
+                                <div class="carousel">
+                                </div>
 
-                        <div class="spinner-layer spinner-yellow">
-                            <div class="circle-clipper left">
-                                <div class="circle"></div>
-                            </div><div class="gap-patch">
-                                <div class="circle"></div>
-                            </div><div class="circle-clipper right">
-                                <div class="circle"></div>
-                            </div>
-                        </div>
+                                <div class="preloader-wrapper big">
+                                    <div class="spinner-layer spinner-blue">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div><div class="gap-patch">
+                                            <div class="circle"></div>
+                                        </div><div class="circle-clipper right">
+                                            <div class="circle"></div>
+                                        </div>
+                                    </div>
 
-                        <div class="spinner-layer spinner-green">
-                            <div class="circle-clipper left">
-                                <div class="circle"></div>
-                            </div><div class="gap-patch">
-                                <div class="circle"></div>
-                            </div><div class="circle-clipper right">
-                                <div class="circle"></div>
+                                    <div class="spinner-layer spinner-red">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div><div class="gap-patch">
+                                            <div class="circle"></div>
+                                        </div><div class="circle-clipper right">
+                                            <div class="circle"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="spinner-layer spinner-yellow">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div><div class="gap-patch">
+                                            <div class="circle"></div>
+                                        </div><div class="circle-clipper right">
+                                            <div class="circle"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="spinner-layer spinner-green">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div><div class="gap-patch">
+                                            <div class="circle"></div>
+                                        </div><div class="circle-clipper right">
+                                            <div class="circle"></div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        </div>
-                        <div class="carousel">
                         </div>
                     </div>
                 </div>
@@ -65,7 +71,7 @@
             <footer class="page-footer blue darken-4 valign-wrapper">
                     <div class="row">
                         <div class="col s12 center">
-                            <a class="pulse waves-effect waves-light btn-floating btn-medium cyan lighten-1" id="mainButton"></a>
+                            <a class="pulse waves-effect waves-light btn-floating btn-large cyan lighten-1" id="mainButton"></a>
                         </div>
                     </div>
             </footer>
