--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container" id="pokedex">
             <nav>
                 <div class="nav-wrapper blue darken-4">
-                    <span class="brand-logo  center" id="trainerName">Trainer:</span>
+                    <a href="#" class="brand-logo center"><img src="images/pokemon-logo-vector.png" alt="Pokemon logo"/></a>
                 </div>
             </nav>
             <div class="row">
@@ -19,6 +19,8 @@
                     <div class="main">
                         <div class="row">
                             <div class="col s12 center">
+                                <h3 id="trainerName"></h3>
+                                <h5 id="pokemonCount"></h5>
                                 <div class="carousel">
                                 </div>
 
