--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
                                 <h5 id="pokemonCount"></h5>
                                 <div class="carousel">
                                 </div>
-
+                                <div id="modal1" class="modal">
+                                    <div class="modal-content">
+                                        <h4>Welcome! Enter your name:</h4>
+                                        <div class="row">
+                                            <form class="col s12">
+                                                <div class="row modal-form-row">
+                                                    <div class="input-field col s12">
+                                                        <input id="userName" type="text" class="validate">
+                                                        <label for="userName">Your Name</label>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" id="submitName">Get My Pokemon!</a>
+                                    </div>
+                                </div>
                                 <div class="preloader-wrapper big">
                                     <div class="spinner-layer spinner-blue">
                                         <div class="circle-clipper left">
@@ -73,7 +90,7 @@
             <footer class="page-footer blue darken-4 valign-wrapper">
                     <div class="row">
                         <div class="col s12 center">
-                            <a class="pulse waves-effect waves-light btn-floating btn-large cyan lighten-1" id="mainButton"></a>
+                            <a class="modal-trigger pulse waves-effect waves-light btn-floating btn-large cyan lighten-1" id="startButton" href="#modal1"></a>
                         </div>
                     </div>
             </footer>
